apps/distribution/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: distribution
  labels:    
    app: distribution
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: distribution
